--- a/desktop/src/kibana/plugins/discover/partials/table.html
+++ b/desktop/src/kibana/plugins/discover/partials/table.html
@@ -12,7 +12,7 @@
       columns="columns"
       sorting="sorting"
       timefield="timefield"
-      filtering="filtering"
+      filter="filtering"
       index-pattern="indexPattern"
       class="discover-table-row"></tr>
   </tbody>
