--- a/desktop/src/kibana/components/doc_viewer/doc_viewer.html
+++ b/desktop/src/kibana/components/doc_viewer/doc_viewer.html
@@ -1,5 +1,5 @@
-<div class="discover-table-details">
-  <ul class="nav nav-tabs discover-table-details-toggle">
+<div class="doc-viewer">
+  <ul class="nav nav-tabs">
     <li ng-class="{active: mode == 'table'}"><a ng-click="mode='table'">Table</a></li>
     <li ng-class="{active: mode == 'json'}"><a ng-click="mode='json'">JSON</a></li>
   </ul>
@@ -10,9 +10,9 @@
         <td field-name="field"
             field-type="mapping[field].type"
             width="1%"
-            class="discover-table-details-field">
+            class="doc-viewer-field">
         </td>
-        <td width="1%" class="discover-table-details-buttons" ng-if="filter">
+        <td width="1%" class="doc-viewer-buttons" ng-if="filter">
           <span bo-if="showFilters(mapping[field])">
             <i ng-click="filter(field, flattened[field], '+')" class="fa fa-search-plus"></i>
             <i ng-click="filter(field, flattened[field],'-')" class="fa fa-search-minus"></i>
@@ -32,7 +32,7 @@
             tooltip-placement="top"
             tooltip="Objects in arrays are not well supported."
             class="fa fa-warning text-color-warning ng-scope doc-viewer-object-array"></i>
-          <span class="discover-table-details-value" ng-bind-html="(formatted[field] || hit[field]) | highlight : hit.highlight[field] | trustAsHtml"></span>
+          <span class="doc-viewer-value" ng-bind-html="(formatted[field] || hit[field]) | highlight : hit.highlight[field] | trustAsHtml"></span>
         </td>
       </tr>
     </tbody>
