--- a/desktop/src/kibana/plugins/settings/styles/main.less
+++ b/desktop/src/kibana/plugins/settings/styles/main.less
@@ -141,6 +141,11 @@ kbn-settings-indices .scripted-fields {
     margin: 5px 0;
     text-align: right;
   }
+
+  & th:last-child,
+  & td:last-child {
+    text-align: right;
+  }
 }
 
 
