[Visualize] Changed the vizualize directive to also accept the chrome module

--- a/desktop/src/plugins/kibana/public/dashboard/components/panel/panel.html
+++ b/desktop/src/plugins/kibana/public/dashboard/components/panel/panel.html
@@ -28,6 +28,7 @@
   <visualize ng-switch-when="visualization"
     vis="savedObj.vis"
     search-source="savedObj.searchSource"
+    chrome="chrome"
     class="panel-content">
   </visualize>
 
