--- a/desktop/src/ui/public/visualize/visualize.less
+++ b/desktop/src/ui/public/visualize/visualize.less
@@ -15,6 +15,8 @@ visualize {
   .visualize-chart {
     flex: 1 1 auto;
     overflow: auto;
+    -webkit-transition: opacity 0.01s;
+    transition: opacity 0.01s;
 
     &.spy-visible {
       margin-bottom: 10px;
