[SpyPanel] reduced scope of new parameter on visualize, added a default if no option is passed in for show-spy-panel Removed conditional on  from discover

--- a/desktop/src/plugins/kibana/public/dashboard/components/panel/panel.html
+++ b/desktop/src/plugins/kibana/public/dashboard/components/panel/panel.html
@@ -28,7 +28,7 @@
   <visualize ng-switch-when="visualization"
     vis="savedObj.vis"
     search-source="savedObj.searchSource"
-    chrome="chrome"
+    show-spy-panel="chrome.getVisible()"
     class="panel-content">
   </visualize>
 
