[filter bar] Move alias to a separate input field

--- a/desktop/src/ui/public/filter_bar/filter_bar.less
+++ b/desktop/src/ui/public/filter_bar/filter_bar.less
@@ -60,6 +60,10 @@ filter-bar .bar {
     margin: 15px 0;
   }
 
+  .filter-edit-alias {
+    margin-top: 15px;
+  }
+
   .filter-link {
     position: relative;
     display: inline-block;
