--- a/public/directives/partials/suggestion.html
+++ b/public/directives/partials/suggestion.html
@@ -2,7 +2,7 @@
   <div class="suggestion"
     ng-click="suggestions.selected = $index"
     ng-class="{active: $index === suggestions.selected}"
-    ng-repeat="suggestion in suggestions.list track by $index | filter:!suggestiom.isAlias">
+    ng-repeat="suggestion in suggestions.list track by $index | orderBy:'name'">
     <h4><strong>{{suggestion.name}}()</strong> <small>{{suggestion.help}} {{suggestion.chainable}}</small></h4>
 
     <p>
