--- a/public/main.less
+++ b/public/main.less
@@ -51,6 +51,18 @@
   }
 }
 
+.timelion:after {
+  content: "{Re}search";
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  font-size: 32px;
+  font-weight: bold;
+  color: @gray;
+  opacity: 0.2;
+  pointer-events: none;
+}
+
 [ng-click] {
   cursor: pointer;
 }
