--- a/public/main.less
+++ b/public/main.less
@@ -152,6 +152,10 @@ input.timelion-interval {
     border-bottom: 1px solid @gray-lighter;
     padding: 5px 20px;
 
+    &:hover {
+      background-color: @gray-lighter;
+    }
+
     &.active {
       background-color: @gray-lighter;
     }
