Improve resize logic

--- a/public/main.less
+++ b/public/main.less
@@ -1,7 +1,10 @@
 @import "~ui/styles/variables.less";
 @import (reference) "~ui/styles/mixins";
 
-
+[chart] {
+  height: 100%;
+  width: 100%;
+}
 
 .timelion {
   position: relative;
