Add help text for all function arguments

--- a/public/main.less
+++ b/public/main.less
@@ -156,6 +156,16 @@ input.timelion-interval {
     border-bottom: 1px solid @gray-lighter;
     padding: 5px 20px;
 
+    &-details {
+      background-color: @body-bg;
+      padding: 10px;
+      border-radius: @border-radius-base;
+
+      > table {
+        margin-bottom: 0px;
+      }
+    }
+
     &:hover {
       background-color: @gray-lighter;
     }
