--- a/public/directives/partials/suggestion.html
+++ b/public/directives/partials/suggestion.html
@@ -3,14 +3,35 @@
     ng-click="completeExpression($index)"
     ng-class="{active: $index === suggestions.selected}"
     ng-repeat="suggestion in suggestions.list track by $index | orderBy:'name'">
-    <h4><strong>{{suggestion.name}}()</strong> <small>{{suggestion.help}} {{suggestion.chainable}}</small></h4>
+    <h4>
+      <strong>{{suggestion.name}}()</strong>
+      <small>
+        {{suggestion.help}}
+        {{suggestion.chainable ? '(Chainable)' : '(Data Source)'}}
+      </small>
+    </h4>
 
-    <p>
+    <div ng-show="suggestion.args.length > (suggestion.chainable ? 1: 0) && suggestions.list.length > 1">
       <strong>Arguments:</strong>
-        <span ng-repeat="arg in suggestion.args" ng-hide="$index < 1 && suggestion.chainable">
-          <strong>{{arg.name}}</strong>=(<em>{{arg.types.join(' | ')}}</em>)
-          <em ng-show="!$last">,</em>
-        </span>
-    </p>
+      <span ng-repeat="arg in suggestion.args" ng-hide="$index < 1 && suggestion.chainable">
+        <strong>{{arg.name}}</strong>=(<em>{{arg.types.join(' | ')}}</em>)
+        <em ng-show="!$last">,</em>
+      </span>
+    </div>
+
+    <div class="suggestion-details" ng-show="suggestions.list.length === 1">
+      <table class="table table-striped table-condensed table-bordered">
+      <thead>
+        <th>Argument Name</th>
+        <th>Accepted Types</th>
+        <th>Information</th>
+      </thead>
+      <tr ng-repeat="arg in suggestion.args" ng-hide="$index < 1 && suggestion.chainable">
+        <td>{{arg.name}}</td>
+        <td><em>{{arg.types.join(', ')}}</em></td>
+        <td>{{arg.help}}</td>
+      </tr>
+      </table>
+    </div>
   </div>
 </div>
