--- a/public/partials/sheet_options.html
+++ b/public/partials/sheet_options.html
@@ -1,6 +1,6 @@
 <form role="form" class="container-fluid">
     <div class="form-group col-md-6">
-      <label>Columns <small>Column count must be divisible by 12</small></label>
+      <label>Columns <small>Column count must divide evenly into 12</small></label>
       <select class="form-control"
         ng-change="opts.search()"
         ng-options="column for column in [1, 2, 3, 4, 6, 12]"
