Removing extra quote

--- a/public/partials/docs/tutorial.html
+++ b/public/partials/docs/tutorial.html
@@ -80,7 +80,7 @@
 
       <p>
         <h4>Passing arguments</h4>
-        Timelion has a number of shortcuts for doing common things, one of which is that for simple arguments, ones that don't contain spaces or special characters, you don't need quotes. Many functions also have defaults, for example <code>.es()</code> and <code>.es(*)</code> do the same thing. Arguments also have names, so you don't have to remember their position, you can pass <code>.es(index='logstash-*', q='*'')</code> to tell the elasticsearch data source <em>"use * as the q (query) for the logstash-* index"</em>
+        Timelion has a number of shortcuts for doing common things, one of which is that for simple arguments, ones that don't contain spaces or special characters, you don't need quotes. Many functions also have defaults, for example <code>.es()</code> and <code>.es(*)</code> do the same thing. Arguments also have names, so you don't have to remember their position, you can pass <code>.es(index='logstash-*', q='*')</code> to tell the elasticsearch data source <em>"use * as the q (query) for the logstash-* index"</em>
       </p>
       <h4>Beyond count</h4>
       <p>
