changing hex colors to 6 alphanumeric characters

--- a/desktop/src/ui/public/styles/variables/colors.less
+++ b/desktop/src/ui/public/styles/variables/colors.less
@@ -2,8 +2,8 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@white:                     #fff;
-@black:                     #000;
+@white:                     #ffffff;
+@black:                     #000000;
 
 @gray2:                     #222222;
 @gray3:                     #333333;
@@ -381,7 +381,7 @@
 //** Modal content border color
 @modal-content-border-color:            rgba(0,0,0,.2);
 //** Modal content border color **for IE8**
-@modal-content-fallback-border-color:   #999;
+@modal-content-fallback-border-color:   #999999;
 //** Modal backdrop background color
 @modal-backdrop-bg:                     @black;
 //** Modal backdrop opacity
@@ -557,7 +557,7 @@
 @code-color:                            #c7254e;
 @code-bg:                               #f9f2f4;
 @kbd-color:                             @white;
-@kbd-bg:                                #333;
+@kbd-bg:                                @gray3;
 @pre-bg:                                @gray-lighter;
 @pre-color:                             @gray-dark;
 @pre-border-color:                      @gray12;
