replacing redundant hex colors with less variables

--- a/desktop/src/ui/public/styles/variables/colors.less
+++ b/desktop/src/ui/public/styles/variables/colors.less
@@ -18,14 +18,14 @@
 @gray12:                    #cccccc;
 @gray13:                    #dddddd;
 
-@gray-base:                 #000000;
-@gray-darker:               #222222;
+@gray-base:                 @black;
+@gray-darker:               @gray2;
 @gray-dark:                 #7b8a8b;
 @gray:                      #95a5a6;
 @gray-light:                #b4bcc2;
 @gray-lighter:              #ecf0f1;
 
-@brand-primary:             #444444;
+@brand-primary:             @gray4;
 @brand-success:             #31C471;
 @brand-info:                #1F6B7A;
 @brand-warning:             #F39C12;
@@ -381,7 +381,7 @@
 //** Modal content border color
 @modal-content-border-color:            rgba(0,0,0,.2);
 //** Modal content border color **for IE8**
-@modal-content-fallback-border-color:   #999999;
+@modal-content-fallback-border-color:   @gray9;
 //** Modal backdrop background color
 @modal-backdrop-bg:                     @black;
 //** Modal backdrop opacity
