moving all color less files into 1 directory

--- a/desktop/src/ui/public/styles/dark-theme.less
+++ b/desktop/src/ui/public/styles/dark-theme.less
@@ -1,4 +1,4 @@
-@import "~ui/styles/dark-variables";
+@import "~ui/styles/variables/colors/dark-theme.less";
 @import "~bootstrap/less/mixins.less";
 
 .tab-dashboard.theme-dark {
