moving all hex color values/variables into colors.less and into the variable directory. Removing duplicate code from dark-variable.less and imported colors.less, adding variables referencing colors back into bootstrap-mods.less, removing the color directory.

--- a/desktop/src/ui/public/styles/dark-variables.less
+++ b/desktop/src/ui/public/styles/dark-variables.less
@@ -1,7 +1,7 @@
+@import "~ui/styles/variables/colors.less";
+
 @brand-primary:                               @gray14;
 @brand-info:                                  #6482e5;
-@brand-warning:                               #f39c12;
-@brand-danger:                                #e74c3c;
 
 @body-bg:                                     @gray3;
 @text-color:                                  #cecece;
